--- a/styles.css
+++ b/styles.css
@@ -6,25 +6,26 @@
 html {
     font-size: 62.5%;
     scroll-behavior: smooth;
+    font-family: century-gothic, sans-serif;
 }
 
 header {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-bottom: 5px;
-    height: auto;
 
     .ornament {
         width: 100%;
+        margin: 0 0 1em 0;
     }
     .logo {
-        margin: 8px 0px 8px 0px;
-        width: 130px;
+        margin: 0 0 1em 0;
+        width: 13em;
     }
     .nav-bar {
+        margin: 0 0 1em 0;
         width: 95%;
-        height: 30px;
+        height: 3em;
         border: 1px solid #727271;
         border-radius: 5px;
 
@@ -47,82 +48,105 @@ header {
         }
     }
 }
-body {
-    .separation {
-        width: 100%;
-        height: 7px;
-        background-color: #bbbaba;
-    }
-    .banner {
-        height: 180px;
-        background-color: #1d1d1b;
-    }
-    .history {
-        padding: 1.8rem;
 
-        .title {
-            margin-bottom: 20px;
-            font-family: century-gothic, sans-serif;
-            font-size: 1.8rem;
-            color: #1a3c34;
-        }
-        .paragraph {
-            font-family: century-gothic, sans-serif;
+.separation {
+    width: 100%;
+    height: 1em;
+    background-color: #bbbaba;
+}
+.banner {
+    height: 18em;
+    background-color: #1d1d1b;
+}
+.history {
+    .title {
+        margin: 20px 0 20px 20px;
+        font-size: 1.8rem;
+        color: #1a3c34;
+    }
+    .paragraph {
+        margin: 0 20px 20px 20px;
+        font-size: 1.4rem;
+        font-weight: bold;
+        color: #1a3c34;
+    }
+}
+.services {
+    display: flex;
+    flex-direction: column;
+
+    .title {
+        margin: 20px 0 20px 20px;
+        font-size: 1.8rem;
+        color: #1d1d1b;
+    }
+    .list {
+        margin: 0 0 20px 40px;
+
+        .item {
             font-size: 1.4rem;
-            font-weight: bold;
-            color: #1a3c34;
         }
     }
-    .services {
+    .gallery-container {
+        position: relative;
         display: flex;
-        flex-direction: column;
+        justify-content: center;
+        margin-bottom: 1.8rem;
+        width: 100%;
 
-        .title {
-            margin: 1.8rem 1.8rem 2rem 1.8rem;
-            font-family: century-gothic, sans-serif;
-            font-size: 1.8rem;
-            color: #1d1d1b;
+        .button {
+            position: absolute;
+            width: 20px;
+            height: 40px;
+            background-color: transparent;
+            border: none;
         }
-        .list {
-            margin: 0rem 1.8rem 1.8rem 3.8rem;
-
-            .item {
-                font-size: 1.4rem;
-                font-family: century-gothic, sans-serif;
-            }
+        .left {
+            top: calc(50% - 20px);
+            left: 5px;
         }
-        .gallery-container {
+        .right {
+            top: calc(50% - 20px);
+            right: 5px;
+        }
+        .gallery {
             position: relative;
+            align-self: center;
             display: flex;
-            justify-content: center;
-            margin-bottom: 1.8rem;
-            width: 100%;
-
-            .button {
-                position: absolute;
-                width: 20px;
-                height: 40px;
-                background-color: transparent;
-                border: none;
-            }
-            .left {
-                top: calc(50% - 20px);
-                left: 5px;
-            }
-            .right {
-                top: calc(50% - 20px);
-                right: 5px;
-            }
-            .gallery {
-                position: relative;
-                align-self: center;
-                display: flex;
-                flex-wrap: nowrap;
-                align-items: center;
-                width: 85%;
-                scroll-behavior: smooth;
-                overflow: hidden;
-            }
+            flex-wrap: nowrap;
+            align-items: center;
+            width: 85%;
+            scroll-behavior: smooth;
+            overflow: hidden;
         }
+    }
+}
+.emotional-assistance {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    .banner {
+        margin: 0 0 2em 0;
+        width: 100%;
+        height: 18em;
+        background-image: url(./assets/tanatology-banner.jpg);
+        background-position: bottom;
+    }
+    .flyer {
+        margin: 0 0 2em 0;
+        width: 26em;
+    }
+    .title {
+        position: relative;
+        left: -20px;
+        align-self: baseline;
+        margin: 0 0 20px 0;
+        font-size: 1.8rem;
+    }
+    .list {
+        align-self: baseline;
+        margin: 0 0 20px 40px;
+        font-size: 1.8rem;
     }
 }
