Added the assets, the contact section, the footer and call buttons

--- a/styles.css
+++ b/styles.css
@@ -47,6 +47,35 @@ header {
             }
         }
     }
+    .call-buttons {
+        position: fixed;
+        z-index: 1;
+        top: 40px;
+        right: 10px;
+
+        .paragraph {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-bottom: 5px;
+            width: 100px;
+            height: 15px;
+            background-color: #1A3C34;
+            border-radius: 5px;
+            font-family: 'Times New Roman', Times, serif;
+            font-size: 0.8rem;
+            color: #FFF;
+        }
+        .anchor {
+            padding: 3px;
+            background-color: #1A3C34;
+            border-radius: 5px;
+            font-family: 'Times New Roman', Times, serif;
+            font-size: 1rem;
+            text-decoration: none;
+            color: #FFF;
+        }
+    }
 }
 
 .separation {
@@ -129,13 +158,15 @@ header {
     .banner {
         margin: 0 0 2em 0;
         width: 100%;
-        height: 18em;
+        height: 120px;
         background-image: url(./assets/tanatology-banner.jpg);
-        background-position: bottom;
+        background-position: center 80%;
+        background-size: 130%;
+        
     }
     .flyer {
-        margin: 0 0 2em 0;
-        width: 26em;
+        margin: 0 0 20px 0;
+        width: 260px;
     }
     .title {
         position: relative;
@@ -148,5 +179,136 @@ header {
         align-self: baseline;
         margin: 0 0 20px 40px;
         font-size: 1.8rem;
+    }
+}
+.contact {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    .title {
+        align-self: flex-start;
+        margin: 20px 0 20px 20px;
+    }
+    .paragraph {
+        align-self: flex-start;
+        margin: 0 0 20px 20px;
+        font-size: 1.4rem;
+    }
+    .form {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        width: 95%;
+
+        .input-container {
+            width: 45%;
+            margin-bottom: 20px;
+
+            .label {
+                display: block;
+                margin-bottom: 10px;
+                font-size: 1.2rem;
+                font-weight: bold;
+            }
+            .input {
+                width: 100%;
+                height: 25px;
+                border: 1px #000 solid;
+            }
+        }
+        .button-container {
+            display: flex;
+            justify-content: start;
+            align-items: end;
+            margin-bottom: 20px;
+            width: 45%;
+
+            .button {
+                width: 75px;
+                height: 25px;
+                border: none;
+                border-radius: 5px;
+                background-color: #415D56;
+                color: #FFF;
+                font-size: 1.2rem;
+                font-weight: bold;
+                font-family: century-gothic, sans-serif;
+            }
+        }
+    }
+    .card {
+        width: 240px;
+        margin-bottom: 20px;
+        border: 2px solid #878787;
+        border-radius: 10px;
+
+        .paragraph {
+            margin: 10px;
+            font-size: 1.3rem;
+            color: #1A3C34;
+        }
+    }
+}
+
+footer {
+    position: relative;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 110px;
+    background-color: #1A3C34;
+
+    .logo {
+        width: 95px;
+    }
+    .privacy {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        height: 80px;
+
+        .paragraph {
+            font-family: 'Times New Roman', Times, serif;
+            font-size: 1.8rem;
+            color: #FFF;
+        }
+        .anchor {
+            text-decoration: none;
+            font-size: 1.5rem;
+            color: #FFF;
+        }
+    }
+    .social-media {
+        .paragraph {
+            margin-bottom: 10px;
+            font-family: 'Times New Roman', Times, serif;
+            color: #FFF;
+        }
+        .icon {
+            width: 15px;
+        }
+        .facebook {
+            margin-left: 15px;
+        }
+    }
+    .rights {
+        position: absolute;
+        bottom: 5px;
+        right: 10px;
+        font-size: 0.5rem;
+        color: #FFF;
+    }
+}
+
+@media (min-width: 450px) {
+    header {
+        display: none;
+    }
+    body {
+        display: none;
+    }
+    footer {
+        display: none;
     }
 }
