--- a/styles.css
+++ b/styles.css
@@ -149,7 +149,7 @@ header {
             .nav-bar {
                 /* Cálculo para centrar la navbar tomando en cuenta 
                 su tamaño y el tamaño del logo con su margen. */
-                margin-left: calc(50vw - 25% - (180px + 50px));
+                margin-left: calc(50% - 25% - (180px + 50px));
                 width: 50%;
                 height: 40px;
 
@@ -179,10 +179,32 @@ header {
         .ornament {
             top: -15px;
             width: 1440px;
+            margin: 0 0 10px 0;
         }
         .logo-navabar-container {
             .logo {
                 width: 230px;
+            }
+            .nav-bar {
+                height: 55px;
+                border-width: 2px;
+                border-radius: 10px;
+
+                .list {
+                    .item {
+                        font-size: 2rem;
+                    }
+                }
+            }
+        }
+        .call-buttons {
+            .paragraph {
+                width: 220px;
+                height: 30px;
+                font-size: 1.8rem;
+            }
+            .anchor {
+                font-size: 2.5rem;
             }
         }
     }
@@ -192,6 +214,10 @@ header {
     width: 100%;
     height: 10px;
     background-color: #bbbaba;
+
+    @media (min-width: 1440px) {
+        height: 20px;
+    }
 }
 .history {
     .banner {
@@ -254,6 +280,22 @@ header {
                 color: #FFF;
             }
         }
+    }
+    @media (min-width: 1440px) {
+        .banner {
+            height: 550px;
+        }
+        .text-container {
+            .title {
+                font-size: 3.6rem;
+            }
+            .paragraph {
+                font-size: 2rem;
+                line-height: 2.5rem;
+            }
+        }
+
+
     }
 }
 .services {
@@ -351,6 +393,32 @@ header {
         }
         .gallery-container {
             margin: 0 0 40px 0;
+        }
+    }
+    @media (min-width: 1440px) {
+        .title {
+            margin: 30px 0 30px 50px;
+            font-size: 3.6rem;
+        }
+        .lists-container {
+            .list {
+                .item {
+                    font-size: 1.8rem;
+                }
+            }
+        }
+        .gallery-container {
+            .button {
+                top: calc(50% - 35px);
+                width: 40px;
+                height: 70px;
+            }
+            .left {
+                left: 50px;
+            }
+            .right {
+                right: 50px;
+            }
         }
     }
 }
@@ -465,6 +533,27 @@ header {
         .photos {
             .photo {
                 height: 280px;
+            }
+        }
+    }
+    @media (min-width: 1440px) {
+        .banner {
+            height: 350px;
+        }
+        .flyer-and-text {
+            height: 350px;
+
+            .flyer {
+                margin: 0 calc(35% - 270px) 30px 0;
+                width: 540px;
+            }
+            .text {
+                .title {
+                    font-size: 3.5rem;
+                }
+                .list {
+                    font-size: 1.8rem;
+                }
             }
         }
     }
@@ -634,6 +723,43 @@ header {
             }
         }
     }
+    @media (min-width: 1440px) {
+        padding: 150px 0 100px 0;
+
+        .title {
+            margin: 0 0 50px 80px;
+            font-size: 3.6rem;
+        }
+        .paragraph {
+            margin: 0 0 80px 80px;
+
+            font-size: 3.6rem;
+        }
+        .form {
+            width: calc(100% - 100px);
+            margin: 0 0 120px 0;
+
+            .input-container {
+                .label {
+                    font-size: 3.6rem;
+                }
+                .input {
+                    height: 80px;
+                    font-size: 3.6rem;
+                }
+            }
+            .button-container {
+                .button {
+                    height: 80px;
+                    width: 230px;
+                    font-size: 3.6rem;
+                }
+            }
+        }
+        .card {
+            margin: 0 100px 0 100px;
+        }
+    }
 }
 
 footer {
@@ -718,5 +844,27 @@ footer {
             margin: 0 20px 20px 0;
             font-size: 1.5rem;
         }
+    }
+    @media (min-width: 1440px) {
+        .social-media {
+            width: 20%;
+        }
+    }
+}
+
+@media (min-width: 1141px) {
+    body {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    header {
+        width: 1440px;
+    }
+    main {
+        width: 1440px;
+    }
+    footer {
+        width: 1440px;
     }
 }
